--- a/pressure/style.css
+++ b/pressure/style.css
@@ -5,9 +5,9 @@ body {
     height: 100vh;
 }
 
-#circle {
-    width: 200px;
-    height: 200px;
+#target {
+    width: 50px;
+    height: 50px;
     background-color: rgb(0, 150, 150);
-    border-radius: 50%;
+    border-radius: 10%;
 }
