Updated code structure

--- a/pressure/style.css
+++ b/pressure/style.css
@@ -3,6 +3,8 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+
+    transition: all 300ms ease;
 }
 
 #target {
